--- a/registration/templates/registration/job/base.html
+++ b/registration/templates/registration/job/base.html
@@ -97,15 +97,26 @@
      <a class="nav-link" href="{% url 'registration:chat_contact_list' %}">
                     <i class="fas fa-comments me-2"></i>Chat History
                 </a>
+
+                <a class="nav-link" href="{% url 'registration:standard_template_builder' %}">
+                    <i class="fas fa-comments me-2"></i>template builder
+                </a>
           <a class="nav-link" href="{% url 'registration:template_sender' %}">
-                    <i class="fas fa-comments me-2"></i>Chat template
+                    <i class="fas fa-comments me-2"></i> template sender
+                </a>
+                <a class="nav-link" href="{% url 'registration:carousel_sender' %}">
+                    <i class="fas fa-comments me-2"></i> template sender CAROUSEL
+                </a>
+
+                <a class="nav-link" href="{% url 'registration:template_schedule' %}">
+                    <i class="fas fa-comments me-2"></i> template sender Schedule
                 </a>
 
                 <a class="nav-link" href="{% url 'registration:template_builder' %}">
                     <i class="fas fa-comments me-2"></i>Create template
                 </a>
                 <a class="nav-link" href="{% url 'registration:carousel_sender' %}">
-                    <i class="fas fa-comments me-2"></i>Carousel Sender
+                    <i class="fas fa-comments me-2"></i>listing Sender
                 </a>
 
                 <a class="nav-link" href="{% url 'registration:carousel_template_builder' %}">
