--- a/registration/templates/registration/job/base.html
+++ b/registration/templates/registration/job/base.html
@@ -113,6 +113,10 @@
                 <a class="nav-link" href="{% url 'registration:template_builder' %}">
                     <i class="fas fa-comments me-2"></i>Create template
                 </a>
+
+                <a class="nav-link" href="{% url 'registration:template_inspector_page' %}">
+                    <i class="fas fa-comments me-2"></i>Create template json
+                </a>
                 <a class="nav-link" href="{% url 'registration:carousel_sender' %}">
                     <i class="fas fa-comments me-2"></i>listing Sender
                 </a>
