--- a/react/src/App.css
+++ b/react/src/App.css
@@ -149,3 +149,45 @@
   justify-content: center;
   color: #888;
 }
+
+
+/* Add these styles to your App.css file */
+
+.divider {
+  border: none;
+  border-top: 1px solid #eee;
+  margin: 10px 0;
+}
+
+.button-input-wrapper {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.button-input-wrapper input {
+  flex-grow: 1;
+}
+
+.add-btn {
+  width: 100%;
+  padding: 5px;
+  margin-top: 5px;
+  background-color: #e6f7ff;
+  border: 1px solid #91d5ff;
+  border-radius: 3px;
+  cursor: pointer;
+}
+.add-btn:hover {
+  background-color: #bae7ff;
+}
+
+.remove-btn {
+  background: none;
+  border: none;
+  color: #ff4d4d;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+  margin-left: 5px;
+}
