--- a/registration/templates/registration/job/base.html
+++ b/registration/templates/registration/job/base.html
@@ -108,6 +108,10 @@
                     <i class="fas fa-comments me-2"></i> template sender CAROUSEL
                 </a>
 
+                <a class="nav-link" href="{% url 'registration:whatsapp_form_builder' %}">
+                    <i class="fas fa-comments me-2"></i> template form
+                </a>
+
                
 
                 <a class="nav-link" href="{% url 'registration:template_builder' %}">
@@ -119,6 +123,14 @@
                 </a>
                 <a class="nav-link" href="{% url 'registration:carousel_sender' %}">
                     <i class="fas fa-comments me-2"></i>listing Sender
+                </a>
+
+                <a class="nav-link" href="{% url 'registration:send_flow_view' %}">
+                    <i class="fas fa-comments me-2"></i> Sender flow
+                </a>
+
+                <a class="nav-link" href="{% url 'registration:create_call_template_page' %}">
+                    <i class="fas fa-comments me-2"></i> call template 
                 </a>
 
                 <a class="nav-link" href="{% url 'registration:carousel_template_builder' %}">
